--- a/BFF.html
+++ b/BFF.html
@@ -54,7 +54,7 @@
     <DIV id='ProgramTable'></div>
 
     <div class="footer">
-        <p>Bernhard Eisvogel, sandbox for "Paradigm of Life" paper</p>
+        <p>Bernhard Eisvogel, sandbox for "Computational Life" paper</p>
     </div>
     
   </BODY>
